--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StudentActivity"></activity>
+        <activity android:name=".admin.StudentActivity" />
+        <activity android:name=".admin.AdminMainActivity" />
+        <activity android:name=".admin.TeacherActivity" />
+        <activity android:name=".admin.SubjectActivity"></activity>
     </application>
 
 </manifest>
